--- a/drivers/bse-alsa/README
+++ b/drivers/bse-alsa/README
@@ -3,7 +3,7 @@ BSE Driver Package
 
 This is a BSE (Bedevilled Sound Engine) plugin/driver package.
 In order to build this package, you need recent versions
-of BSE (>=0.6.3) and ALSA (>=1.0). Read the "Installation"
+of BSE (>=0.7.2) and ALSA (>=1.0). Read the "Installation"
 section about the non standard installation path detection
 of this driver package.
 
@@ -33,4 +33,4 @@ libbse installtion. The exact installation location can be
 found out via pkg-config with:
   pkg-config --variable=driverdir bse	
 
-For general installation instructions, see the file `INSTALL'.
+For general installation instructions, see the file 'INSTALL'.
