--- a/po/nb.po
+++ b/po/nb.po
@@ -1,7 +1,7 @@
 # Norwegian bokmål translation of beast.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the beast package.
-# Kjartan Maraas <kmaraas@broadpark.no>, 2010.
+# Kjartan Maraas <kmaraas@gnome.org>, 2010.
 #
 msgid ""
 msgstr ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-09-10 02:03+0200\n"
 "PO-Revision-Date: 2010-03-15 10:43+0100\n"
-"Last-Translator: Kjartan Maraas <kmaraas@broadpark.no>\n"
+"Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
