--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Overview of Changes in BEAST/BSE 0.7.8:
+
+* Wave oscillator fixes for 96k samples (bug #612281). [stw]
+* Performance improvements of the scheme shell. [stw]
+* Allow Alt+MouseButton1 to drag synthesis modules.
+* Merged plugin libraries, improved build times.
+* Use the ALSA 'default' PCM driver by default.
+* Adapt code to allow fftw drop ins. [stw]
+* Migrated code base to compile as C++11.
+* Lots of simplifications and cleanups.
+* Extended MIDI device listing.
+* Improved Beast startup time.
+
 Overview of Changes in BEAST/BSE 0.7.6:
 
 * Packaging fixups, download and integrate documentation from beast wiki.
