DOCS: import latest bsewavetool.1

--- a/docs/imports/bsewavetool.1
+++ b/docs/imports/bsewavetool.1
@@ -1,8 +1,8 @@
-.TH "BSEWAVETOOL" "1" "2011\-05\-02" "Revision 308" "Testbit Wiki Pages"
+.TH "BSEWAVETOOL" "1" "2013\-06\-18" "Revision 949" "Testbit Wiki Pages"
 
 .SH NAME
 
-bsewavetool - A tool for editing the native multisample format for \fIbeast\fR and \fIBse\fR.
+bsewavetool - A tool for editing the native multisample format of \fIBeast\fR and \fIBse\fR.
 
 .SH SYNOPSIS
 
