DOCS: update manual page imports

--- a/docs/imports/beast.1
+++ b/docs/imports/beast.1
@@ -1,4 +1,4 @@
-.TH "BEAST" "1" "2011\-05\-09" "Revision 319" "Testbit Wiki Pages"
+.TH "BEAST" "1" "2014\-10\-28" "Revision 1121" "Testbit Wiki Pages"
 
 .SH NAME
 
@@ -139,8 +139,8 @@ Do all X calls synchronously.
 
 .SH SEE ALSO
 
-bsescm.1 <http://testbit.eu/Bsescm.1>,
-bse.5 <http://testbit.eu/Bse.5>,
-sfidl.1 <http://testbit.eu/Sfidl.1>,
+bsescm.1 <https://testbit.eu/wiki/Bsescm.1>,
+bse.5 <https://testbit.eu/wiki/Bse.5>,
+sfidl.1 <https://testbit.eu/wiki/Sfidl.1>,
 BEAST/BSE Website <http://beast.gtk.org>
 
