--- a/docs/imports/bse.5
+++ b/docs/imports/bse.5
@@ -1,4 +1,4 @@
-.TH "BSE" "5" "2011\-01\-25" "Revision 175" "Testbit Wiki Pages"
+.TH "BSE" "5" "2014\-10\-28" "Revision 1122" "Testbit Wiki Pages"
 
 .SH NAME
 
@@ -34,8 +34,8 @@ indicates the \fBbse\fR file format version of the supplied content.
 
 .SH SEE ALSO
 
-beast.1 <http://testbit.eu/Beast.1>,
-bsescm.1 <http://testbit.eu/Bsescm.1>,
-bsewavetool.1 <http://testbit.eu/Bsewavetool.1>,
+beast.1 <https://testbit.eu/wiki/Beast.1>,
+bsescm.1 <https://testbit.eu/wiki/Bsescm.1>,
+bsewavetool.1 <https://testbit.eu/wiki/Bsewavetool.1>,
 BSE Object Reference <http://beast.gtk.org/bse-objects>
 
