--- a/docs/imports/bsescm.1
+++ b/docs/imports/bsescm.1
@@ -1,4 +1,4 @@
-.TH "BSESCM" "1" "2011\-05\-02" "Revision 307" "Testbit Wiki Pages"
+.TH "BSESCM" "1" "2014\-10\-28" "Revision 1120" "Testbit Wiki Pages"
 
 .SH NAME
 
@@ -143,8 +143,8 @@ Load Scheme source from \fIscript\fR and execute as a script.
 
 .SH SEE ALSO
 
-beast.1 <http://testbit.eu/Beast.1>,
-bse.5 <http://testbit.eu/Bse.5>,
+beast.1 <https://testbit.eu/wiki/Beast.1>,
+bse.5 <https://testbit.eu/wiki/Bse.5>,
 BEAST/BSE Website <http://beast.testbit.eu>,
 Guile <http://www.gnu.org/software/guile/docs/>
 
