--- a/docs/imports/bsewavetool.1
+++ b/docs/imports/bsewavetool.1
@@ -1,4 +1,4 @@
-.TH "BSEWAVETOOL" "1" "2013\-06\-18" "Revision 949" "Testbit Wiki Pages"
+.TH "BSEWAVETOOL" "1" "2014\-10\-28" "Revision 1119" "Testbit Wiki Pages"
 
 .SH NAME
 
@@ -495,7 +495,7 @@ This bash script shows the length of all chunks (like info --all-chunks):
 
 .SH SEE ALSO
 
-beast.1 <http://testbit.eu/Beast.1>,
+beast.1 <https://testbit.eu/wiki/Beast.1>,
 BEAST/BSE Website <http://beast.testbit.eu>,
-Samples and Wave Files in BEAST <http://testbit.eu/Beast_Architecture#Samples_and_Wave_Files>
+Samples and Wave Files in BEAST <https://testbit.eu/wiki/Beast_Architecture#Samples_and_Wave_Files>
 
