--- a/docs/imports/sfidl.1
+++ b/docs/imports/sfidl.1
@@ -1,4 +1,4 @@
-.TH "SFIDL" "1" "2011\-05\-02" "Revision 305" "Testbit Wiki Pages"
+.TH "SFIDL" "1" "2014\-10\-28" "Revision 1123" "Testbit Wiki Pages"
 
 .SH NAME
 
@@ -95,7 +95,7 @@ Select mixed case identifiers in the C++ client language binding (createMidiSynt
 
 .SH SEE ALSO
 
-bsescm.1 <http://testbit.eu/Bsescm.1>,
+bsescm.1 <https://testbit.eu/wiki/Bsescm.1>,
 BSE Object Reference <http://beast.testbit.eu/bse-objects>,
 BSE Interface Reference <http://beast.testbit.eu/bse-interface>,
 SFIDL Documentation <http://beast.testbit.eu/sfidl-manual>
