--- a/README
+++ b/README
@@ -1,39 +1,25 @@
 General Information
 ===================
 
-This is a development version of BEAST/BSE, the BEtter Audio SysTem
-and the Better Sound Engine. BEAST is a powerful music composition
-and modular synthesis application released as free software under the
-GNU LGPL, that runs under unix. More information about the project can
-can be found on the website and in the documents and manuals shipped
-with release tarballs.
+This is a development version of BEAST, the BEtter Audio SysTem.
+BEAST is a powerful music composition and modular synthesis application
+released as free software under the GNU LGPL, that runs under Unix.
+More information about the project can can be found on the website
+and in the documentation.
 
 Beast is a soft realtime application which needs elevated CPU
 scheduling priorities. It installs a small suid wrapper which
 acquires nice level -20 and then immediately drops privileges.
-For linux kernels of the 2.6.x series, this enables the low-latency
-scheduling behavior needed to avoid audio drop outs, this kernel
-series is therefore recommended for operating Beast.
+For Linux kernels of the 2.6.x series and later, this enables the
+low-latency scheduling behavior needed to avoid audio drop outs,
+this kernel series is therefore recommended for operating Beast.
 
-In order to build release tarballs, Gtk+-2.12 is needed, a recent
-version of GnomeCanvas, Guile-1.6 and the Ogg/Vorbis Codec libraries.
+In order to build release tarballs, Rapicorn-14.10, the GnomeCanvas,
+Guile, the Ogg/Vorbis Codec libraries and libflac are required.
 Support for MP3 files is optional and requires libmad (MPEG audio
 decoder library) when compiling BEAST.
-Most distributions already ship with these packages,
-the sources can be found at:
 
-GnomeCanvas (use >= 2.4):
-  ftp://ftp.gnome.org/pub/GNOME/sources/libgnomecanvas/
-Gtk+:
-  http://ftp.gnome.org/pub/gnome/sources/gtk+/
-Guile:
-  http://www.gnu.org/software/guile/guile.html
-Ogg/Vorbis:
-  http://www.xiph.org/ogg/vorbis/download/
-MAD (BSE requires libmad-0.15.1b):
-  http://www.mars.org/home/rob/proj/mpeg/
-
-The web site, download and forums for BEAST/BSE are:
+The web site, download and forums for BEAST are:
   http://beast.testbit.eu/
   http://beast.testbit.eu/beast-ftp/
   http://mail.gnome.org/mailman/listinfo/beast/ (beast@gnome.org)
@@ -43,9 +29,8 @@ BEAST also supports the LADSPA plugin API, so various kinds of third
 party plugins can be loaded and executed by BEAST. LADSPA plugins are
 available from:
 	http://www.ladspa.org
-And from places linked there. BEAST will look for LADSPA plugins under
-lib/ladspa/ of it's own installation prefix, and in the directories
-listed in $LADSPA_PATH.
+BEAST will look for LADSPA plugins under lib/ladspa/ inside it's own
+installation prefix, and in the directories listed in $LADSPA_PATH.
 
 
 Installation
